Simplify and adapt DB model to new ReportNode API (#87)
* Simplify and adapt DB model to new ReportNode API

Signed-off-by: Ayoub LABIDI <ayoub.labidi@protonmail.com>

* fix unit tests

Signed-off-by: Ayoub LABIDI <ayoub.labidi@protonmail.com>

* Fix checkStyle

Signed-off-by: Ayoub LABIDI <ayoub.labidi@protonmail.com>

* fix sonar issues

Signed-off-by: Ayoub LABIDI <ayoub.labidi@protonmail.com>

* add message based filter

Signed-off-by: Ayoub LABIDI <ayoub.labidi@protonmail.com>

* Fix incremental modifications reports

Signed-off-by: Ayoub LABIDI <ayoub.labidi@protonmail.com>

* Requested changes

Signed-off-by: Ayoub LABIDI <ayoub.labidi@protonmail.com>

* Refacto

Signed-off-by: Ayoub LABIDI <ayoub.labidi@protonmail.com>

* Requested change

Signed-off-by: Ayoub LABIDI <ayoub.labidi@protonmail.com>

---------

Signed-off-by: Ayoub LABIDI <ayoub.labidi@protonmail.com>